crates/air_r_parser/tests/snapshots/error/parenthesized_expression_error.R
# TODO: Enable error tests for these. They fail to parse due to not having
# exactly one expression in the parenthesis body.
()

(
  a
  b
)
